# vaulton

./: .gitignore  Cargo.toml  README.md  config.yaml  docker-compose.yml
.sqlx/: query-1740b95f8b8041f101fcf9f18a72f6cd644e67d5386759bf6758187a7783cfc9.json  query-288d3d62f718618a720168f3f3196d2498d7064df5199cfce04f98beac629213.json  query-39ce97bc28ec16191fb95ef0e19f911f48f280ae671bc6cbb153efa85c7f9287.json  query-595ff36caedcc8f6fb095b137472acc9d75dfea57a57dbea6aebcc70cb2f27f2.json  query-62bed7c6cec6b8a79a5d34b5ac8f9902aeec9a8335093c2b0fab41ac206e525e.json  query-91bc572429fd53c985ca505d5ee469cc8cb8ad99b191aad45ae7de44ac3536aa.json  query-9edc63a634a8aeafafe01f3548ca422ed5b76917dda6534de24e61bff7e9ba2c.json  query-fe02811b9cb58a7a63b52192802bad0523498889adda067516de26439a354dd5.json
migrations/: 20250418190449_initial_schema.sql  20250419062714_users.sql  20250419075240_roles.sql
src/: lib.rs  main.rs
src/config/: builder.rs  env_config_source.rs  mod.rs  yaml_config_source.rs
src/db/: mod.rs
src/di/: mod.rs
src/domain/: client.rs  mod.rs  role.rs  user.rs
src/fs/: mock_file_system.rs  mod.rs
src/oidc/: auth.http  auth.rs  discovery.http  discovery.rs  error.rs  errors.rs  mod.rs  types.rs
src/repository/: auth_request_repository.rs  client_repository.rs  mod.rs  roles_repository.rs  user_repository.rs
src/server/: health.rs  mod.rs
src/server/api/: client.rs  mod.rs  user.http  user.rs
src/utils/: env_parser.rs  merge.rs  mod.rs
src/utils/env/: mod.rs  test_env.rs
src/utils/fs/: mock_file_system.rs
tests/: config_sources.rs
vaulton-derive/: Cargo.toml
vaulton-derive/src/: lib.rs
