[package]
name = "vaulton"
version = "0.1.0"
edition = "2021"

[lib]
name = "vaulton"
path = "src/lib.rs"

[[bin]]
name = "vaulton"
path = "src/main.rs"


[dependencies]
axum = "0.7"        
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
envy = "0.4"
vaulton-derive = { path = "vaulton-derive" }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.8"

[workspace]
members = [
    ".",
    "vaulton-derive",
]