[package]
name = "vaulton"
version = "0.1.0"
edition = "2021"

[lib]
name = "vaulton"
path = "src/lib.rs"

[[bin]]
name = "vaulton"
path = "src/main.rs"


[dependencies]
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",  # Runtime & TLS support
    "postgres",              # PostgreSQL
    "uuid",                  # UUID support
    "chrono",               # DateTime support
    "json",                 # JSON support
    "migrate"               # DB migrations support
]}
shaku = "0.6"
async-trait = "0.1"  # We'll need this for async services
clap = { version = "4.4", features = ["derive"] }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
envy = "0.4"
vaulton-derive = { path = "vaulton-derive" }
serde_json = "1.0"
url = "2.5.0"
chrono = "0.4.40"
rand = "0.9.1"

[dev-dependencies]
tempfile = "3.8"

[workspace]
members = [
    ".",
    "vaulton-derive",
]